# verlet-physics-engine

./: .gitignore  Ball.cpp  Ball.h  CMakeLists.txt  README.md  World.cpp  World.h  collision_demo.cpp  data.csv  main  main.cpp  run.sh
misc/: CSVWriter.hpp
ml/: load.cpp  model.pt  train.ipynb
physics/: KinematicBody.cpp  KinematicBody.hpp  Linker.cpp  PhysicsBody.hpp  StaticBody.cpp  StaticBody.hpp  ThreadPool.cpp  ThreadPool.hpp  World.cpp  World.hpp
src/: main.cpp
src/app/: App.cpp  App.hpp  StateManager.hpp
src/app/state/: Library.hpp  States.hpp
src/app/state/blank/: BlankState.cpp  BlankState.hpp
src/app/state/chain/: ChainState.cpp  ChainState.hpp
src/app/state/chain_shoot/: ChainShooter.cpp  ChainShooter.hpp
src/app/state/cloth/: ClothState.cpp  ClothState.hpp
src/app/state/menu/: MenuState.cpp  MenuState.hpp
src/app/state/particle/: ParticleState.cpp  ParticleState.hpp
src/app/state/polygon/: PolygonState.cpp  PolygonState.hpp
src/app/state/quad_tree/: QuadParticleState.cpp  QuadParticleState.hpp
src/app/state/shapes/: ShapesState.cpp  ShapesState.hpp
src/app/state/state/: State.hpp
src/app/state/truss/: TrussState.cpp  TrussState.hpp
src/physics/: KinematicBody.cpp  PhysicsBody.hpp  World.cpp  World.hpp
src/physics/body/: KinematicBody.cpp  KinematicBody.hpp  Linker.cpp  Linker.hpp  PhysicsBody.cpp  PhysicsBody.hpp  StaticBody.cpp  StaticBody.hpp
src/physics/collision/: Collision.cpp  Collision.hpp  collision_utils.cpp  collision_utils.hpp
src/physics/linker/: Linker.cpp  Linker.hpp
src/physics/shapes/: KinematicSquare.cpp  KinematicSquare.hpp  KinematicTriangle.cpp  KinematicTriangle.hpp
src/physics/utils/: utils.cpp  utils.hpp
src/state/blank/: BlankState.cpp  BlankState.hpp
src/state/chain/: ChainState.hpp
src/state/menu/: MenuState.hpp
src/state/shapes/: ShapesState.cpp  ShapesState.hpp
src/state/state/: State.hpp
src/ui/: button.hpp
src/utils/: utils.cpp  utils.hpp
